[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/ConnectionII.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/title_background.jpg" type="Texture" id=3]
[ext_resource path="res://Assets/black.jpg" type="Texture" id=4]
[ext_resource path="res://Scripts/MenuSerial.cs" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[node name="Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 382, 514 )
scale = Vector2( 0.804167, 1.16667 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = 83.0
margin_top = 10.0
margin_right = 693.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 1 )
text = "The Living Board Game: Fallout"
align = 1

[node name="StartGame" type="Button" parent="."]
margin_left = 90.0
margin_top = 140.0
margin_right = 310.0
margin_bottom = 280.0
focus_neighbour_right = NodePath("../Help")
text = "Start Game"

[node name="Help" type="Button" parent="."]
margin_left = 450.0
margin_top = 140.0
margin_right = 690.0
margin_bottom = 280.0
focus_neighbour_left = NodePath("../StartGame")
text = "Help"

[node name="StartLabel" type="Label" parent="."]
margin_left = 66.0
margin_top = 233.0
margin_right = 340.0
margin_bottom = 273.0
rect_pivot_offset = Vector2( 110, -13 )
custom_fonts/font = SubResource( 1 )
text = "Up Button"
align = 1

[node name="DownLabel" type="Label" parent="."]
margin_left = 432.0
margin_top = 236.0
margin_right = 706.0
margin_bottom = 276.0
rect_pivot_offset = Vector2( 110, -13 )
custom_fonts/font = SubResource( 1 )
text = "Down Button"
align = 1

[node name="HelpScreen" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Background" type="Sprite" parent="HelpScreen"]
visible = false
position = Vector2( 395.5, 244 )
scale = Vector2( 1.23571, 1 )
texture = ExtResource( 4 )

[node name="HelpLabel" type="Label" parent="HelpScreen"]
visible = false
margin_left = 272.0
margin_top = 11.0
margin_right = 544.0
margin_bottom = 28.0
rect_pivot_offset = Vector2( 166, 17 )
custom_fonts/font = SubResource( 2 )
text = "The nuclear fallout is here, yay!"

[node name="HelpLabel2" type="Label" parent="HelpScreen"]
visible = false
margin_left = 76.0
margin_top = 96.0
margin_right = 761.0
margin_bottom = 153.0
rect_pivot_offset = Vector2( 483, 43 )
custom_fonts/font = SubResource( 2 )
text = "Today is another day of searching the nuclear wasteland for food and supplies. However, you and the other players have the same goal: trying to reach the supply cache in the middle of the nearby wasteland."
align = 1
autowrap = true

[node name="HelpLabel3" type="Label" parent="HelpScreen"]
visible = false
margin_left = 72.0
margin_top = 194.0
margin_right = 757.0
margin_bottom = 251.0
rect_pivot_offset = Vector2( 419, 48 )
custom_fonts/font = SubResource( 2 )
text = "You don't want to starve right? Use your registered player figure to keep track of your stats. Visit shops, fight enemies, and barter with other players to get powerful equipments to augment your abilities."
align = 1
autowrap = true

[node name="HelpLabel4" type="Label" parent="HelpScreen"]
visible = false
margin_left = 72.0
margin_top = 292.0
margin_right = 757.0
margin_bottom = 369.0
rect_pivot_offset = Vector2( 419, 48 )
custom_fonts/font = SubResource( 2 )
text = "For proper operation, make sure that your player figure is on the main board during your turn. Only place the figure on the same NFC reader that was used during the registration step. Place the figure on the final NFC reader to start the fight for the winner!"
align = 1
autowrap = true

[node name="BackLabel" type="Label" parent="HelpScreen"]
visible = false
margin_left = 341.0
margin_top = 388.0
margin_right = 478.0
margin_bottom = 412.0
rect_pivot_offset = Vector2( 419, 48 )
custom_fonts/font = SubResource( 2 )
text = "Down Button"
align = 1
autowrap = true

[node name="Back" type="Button" parent="HelpScreen"]
visible = false
margin_left = 339.0
margin_top = 407.0
margin_right = 477.0
margin_bottom = 469.0
text = "Main Menu"

[connection signal="pressed" from="StartGame" to="." method="_on_StartGame_pressed"]
[connection signal="pressed" from="Help" to="." method="_on_Help_pressed"]
[connection signal="pressed" from="HelpScreen/Back" to="." method="_on_Back_pressed"]
